--- a/templates/signin.html
+++ b/templates/signin.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
-    <title>Sign up | Summeranciationalize</title>
+    <title>Sign in | Summeranciationalize</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Le styles -->
