--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,6 +5,7 @@
             <li>doc</li>
             <li>faq</li>
             <li>about</li>
+            <li><a href="/pin">pin</a></li>
             <li><a href="/">bounce!</a></li>
         </ul>
     </div>
