--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,6 +6,9 @@
             <li>faq</li>
             <li>about</li>
             <li><a href="/pin">pin</a></li>
+            {% if loginUser %}
+            <li><a href="/account/{{ loginUser }}">me</a></li>
+            {% endif %}
             <li><a href="/">bounce!</a></li>
         </ul>
     </div>
