--- a/templates/account_overview.html
+++ b/templates/account_overview.html
@@ -112,7 +112,7 @@
                                     <li>
                                         <img src="http://g.etfv.co/{{ f.link.url }}" style="width: 16px; height: 16px;">
                                         <a href="{{ f.link.url }}">{{ f.link.url }}</a>
-                                        {% if self %}
+                                        {% if loginUser == username %}
                                         <i class="icon-remove" style="float: right;"></i>
                                         {% endif %}
                                     </li>
