add contack mail in footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,6 +7,7 @@
             <li>about</li>
             <li><a href="/pin">pin</a></li>
             {% if loginUser %}
+            <li><a href="mailto:robot@summeranciationalize.com?Subject=I wanna see this site">want</a></li>
             <li><a href="/account/{{ loginUser }}">me</a></li>
             {% else %}
             <li><a href="/signin">login</a></li>
